--- a/data/theme/linux/index.css
+++ b/data/theme/linux/index.css
@@ -69,10 +69,8 @@
 /*** Link Display ***/
 
 .statuspanel-label {
-    -moz-appearance: tooltip !important;
     margin-right: 0px !important;
     margin-left: 0px !important;
-    box-shadow: 8px 3px 0 rgba(0,0,0,.18) !important; /* would otherwise display a transparent pixel on the tooltip's corner */
 }
 
 .statuspanel-inner {
@@ -98,7 +96,6 @@ statuspanel[mirror]:-moz-locale-dir(ltr) .statuspanel-inner,
 statuspanel[mirror]:-moz-locale-dir(rtl) .statuspanel-inner {
     margin-top: 8px !important;
     margin-bottom: 10px !important;
-    box-shadow: 5px 5px 0 -4px rgba(0,0,0,.18), 5px 5px 0 -3px rgba(0,0,0,.15), 5px 5px 0 -2px rgba(0,0,0,.12), 5px 5px 0 -1px rgba(0,0,0,.09) !important;
     padding: 0px 0px !important;
     border-radius: 4px !important;
 }
@@ -107,7 +104,6 @@ statuspanel:-moz-locale-dir(ltr):not([mirror]) .statuspanel-inner,
 statuspanel:-moz-locale-dir(rtl):not([mirror]) .statuspanel-inner {
     margin-top: 14px !important;
     margin-bottom: 5px !important;
-    box-shadow: 5px 5px 0 -4px rgba(0,0,0,.18), 5px 5px 0 -3px rgba(0,0,0,.15), 5px 5px 0 -2px rgba(0,0,0,.12), 5px 5px 0 -1px rgba(0,0,0,.09) !important;
     padding: 0px 0px !important;
     border-radius: 4px !important;
 }
